[package]
name = "rust-web-dev"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# We can omit the version number for local imports
handle-errors = { path = "handle-errors" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "0.8", features = ["v4"] }
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "migrate",
    "postgres",
] }
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.1.1"
reqwest-retry = "0.1.1"
rand = "0.8"
rust-argon2 = "1.0"
paseto = "2.0"
chrono = "0.4.19"
clap = { version = "4.3.4", features = ["derive"] }
dotenv = "0.15.0"

[build-dependencies]
platforms = "2.0.0"
